--- a/website/basket.html
+++ b/website/basket.html
@@ -1,27 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <title>Your Basket</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
-  <div class="logo">
-    <img src="logo.jpg">
-    <h1>Your Basket</h1>
-  </div>
+  <div class="logo">Your Basket</div>
 </header>
 
-<div style="padding:40px">
-  <h2>Items in basket:</h2>
-  <p id="items"></p>
-</div>
+<main class="basket-page">
+  <ul id="basket-items"></ul>
+</main>
 
-<script>
-const basket = JSON.parse(localStorage.getItem("basket")) || [];
-document.getElementById("items").innerText =
-  basket.length === 0 ? "Basket is empty." : `You have ${basket.length} items.`;
-</script>
-
+<script src="script.js"></script>
 </body>
 </html>
