--- a/website/index.html
+++ b/website/index.html
@@ -8,7 +8,10 @@
 <body>
 
 <header>
-  <div class="logo">Bumble & Yarn</div>
+  <div class="header-left">
+    <img src="logo.jpg" class="logo">
+    <h1>Bumble & Yarn</h1>
+  </div>
   <nav>
     <a href="index.html">Home</a>
     <a href="shop.html">Shop</a>
@@ -16,15 +19,13 @@
   </nav>
 </header>
 
-<main class="home">
-  <h1>Welcome to Bumble & Yarn</h1>
+<section class="home">
+  <h2>Welcome to Bumble & Yarn</h2>
   <p>Handmade crochet coasters made with love.</p>
-</main>
+</section>
 
-<a href="basket.html" class="basket-icon">
-  🛒 <span id="basket-count">0</span>
-</a>
+<a href="basket.html" class="basket-icon">🛒<span id="basketCount">0</span></a>
 
-<script src="script.js"></script>
+<script src="products.js"></script>
 </body>
 </html>
