--- a/website/shop.html
+++ b/website/shop.html
@@ -8,7 +8,10 @@
 <body>
 
 <header>
-  <div class="logo">Bumble & Yarn</div>
+  <div class="header-left">
+    <img src="logo.jpg" class="logo">
+    <h1>Bumble & Yarn</h1>
+  </div>
   <nav>
     <a href="index.html">Home</a>
     <a href="shop.html">Shop</a>
@@ -16,79 +19,97 @@
   </nav>
 </header>
 
-<main class="shop-grid">
+<section class="products">
 
-  <!-- PRODUCT 1 -->
+  <!-- FLURRY -->
   <div class="product">
-    <img src="coaster1.jpg">
+    <img src="flurry coaster.jpg">
     <h3>Flurry Coaster</h3>
     <p>A cute simple puff-like coaster.</p>
 
     <select class="price">
       <option value="">Select price</option>
-      <option value="8">£8 – Set of 2</option>
-      <option value="16">£16 – Set of 4</option>
+      <option value="£8">£8 – Set of 2</option>
+      <option value="£16">£16 – Set of 4</option>
+      <option value="£24">£24 – Set of 6</option>
     </select>
 
     <select class="colour">
       <option value="">Select colour</option>
-      <option>Blue</option>
       <option>Pink</option>
+      <option>Blue</option>
       <option>Cream</option>
     </select>
 
-    <button onclick="addToBasket('Flurry Coaster')">Add to basket</button>
+    <button onclick="addToBasket('Flurry Coaster', this)">Add to basket</button>
   </div>
 
-  <!-- PRODUCT 2 -->
+  <!-- FLOWER -->
   <div class="product">
-    <img src="flower.jpg">
+    <img src="flower petal coaster.jpg">
     <h3>Flower Petal Coaster</h3>
-    <p>Special flower petal coasters.</p>
+    <p>Special flower petal coasters made with love.</p>
 
     <select class="price">
       <option value="">Select price</option>
-      <option value="10">£10 – Set of 2</option>
-      <option value="20">£20 – Set of 4</option>
+      <option value="£10">£10 – Set of 2</option>
+      <option value="£20">£20 – Set of 4</option>
     </select>
 
     <select class="colour">
       <option value="">Select colour</option>
-      <option>Pink</option>
-      <option>Yellow</option>
-      <option>Purple</option>
+      <option>Rainbow</option>
+      <option>Pastel</option>
     </select>
 
-    <button onclick="addToBasket('Flower Petal Coaster')">Add to basket</button>
+    <button onclick="addToBasket('Flower Petal Coaster', this)">Add to basket</button>
   </div>
 
-  <!-- PRODUCT 3 – CACTUS (NO COLOURS) -->
+  <!-- CACTUS -->
   <div class="product">
-    <img src="cactus.jpg">
+    <img src="cactus coaster.jpg">
     <h3>The Cactus</h3>
     <p>Fun cactus coaster set.</p>
 
     <select class="price">
       <option value="">Select price</option>
-      <option value="8">£8 – Set of 2 (no pot)</option>
-      <option value="23">£23 – Set of 2 (with pot)</option>
-      <option value="16">£16 – Set of 4 (no pot)</option>
-      <option value="31">£31 – Set of 4 (with pot)</option>
-      <option value="24">£24 – Set of 6 (no pot)</option>
-      <option value="39">£39 – Set of 6 (with pot)</option>
-      <option value="32">£32 – Set of 8 (no pot)</option>
-      <option value="47">£47 – Set of 8 (with pot)</option>
+      <option value="£8">£8 – 2 (no pot)</option>
+      <option value="£23">£23 – 2 (with pot)</option>
+      <option value="£16">£16 – 4 (no pot)</option>
+      <option value="£31">£31 – 4 (with pot)</option>
+      <option value="£24">£24 – 6 (no pot)</option>
+      <option value="£39">£39 – 6 (with pot)</option>
+      <option value="£32">£32 – 8 (no pot)</option>
+      <option value="£47">£47 – 8 (with pot)</option>
     </select>
 
-    <button onclick="addToBasket('The Cactus')">Add to basket</button>
+    <button onclick="addToBasket('Cactus Coaster', this)">Add to basket</button>
   </div>
 
-</main>
+  <!-- HELM -->
+  <div class="product">
+    <img src="helm coaster.jpg">
+    <h3>Helm Coaster</h3>
+    <p>Nautical-inspired helm coaster.</p>
 
-<a href="basket.html" class="basket-icon">
-  🛒 <span id="basket-count">0</span>
-</a>
+    <select class="price">
+      <option value="">Select price</option>
+      <option value="£12">£12 – Set of 2</option>
+    </select>
 
-<script src="script.js"></script>
+    <select class="colour">
+      <option value="">Select colour</option>
+      <option>Navy</option>
+      <option>White</option>
+    </select>
+
+    <button onclick="addToBasket('Helm Coaster', this)">Add to basket</button>
+  </div>
+
+</section>
+
+<a href="basket.html" class="basket-icon">🛒<span id="basketCount">0</span></a>
+
+<script src="products.js"></script>
 </body>
 </html>
