--- a/website/basket.html
+++ b/website/basket.html
@@ -8,13 +8,18 @@
 <body>
 
 <header>
-  <div class="logo">Your Basket</div>
+  <div class="header-left">
+    <img src="logo.jpg" class="logo">
+    <h1>Your Basket</h1>
+  </div>
 </header>
 
-<main class="basket-page">
-  <ul id="basket-items"></ul>
-</main>
+<section class="basket">
+  <ul id="basketItems"></ul>
+</section>
 
-<script src="script.js"></script>
+<a href="basket.html" class="basket-icon">🛒<span id="basketCount">0</span></a>
+
+<script src="products.js"></script>
 </body>
 </html>
