--- a/website/index.html
+++ b/website/index.html
@@ -7,24 +7,23 @@
 </head>
 <body>
 
-<header>
-  <div class="header-left">
-    <img src="logo.jpg" class="logo">
-    <h1>Bumble & Yarn</h1>
-  </div>
-  <nav>
+<header class="header">
+  <img src="logo.jpg" class="logo">
+  <h1>Bumble & Yarn</h1>
+  <p class="welcome">Welcome to Bumble & Yarn</p>
+
+  <nav class="nav">
     <a href="index.html">Home</a>
     <a href="shop.html">Shop</a>
     <a href="#">About</a>
   </nav>
 </header>
 
-<section class="home">
-  <h2>Welcome to Bumble & Yarn</h2>
-  <p>Handmade crochet coasters made with love.</p>
-</section>
+<main class="home">
+  <h2>Handmade crochet items made with love 🧶</h2>
+</main>
 
-<a href="basket.html" class="basket-icon">🛒<span id="basketCount">0</span></a>
+<a href="basket.html" class="basket-float">🛒</a>
 
 <script src="products.js"></script>
 </body>
