--- a/website/shop.html
+++ b/website/shop.html
@@ -2,113 +2,118 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Shop – Bumble & Yarn</title>
+  <title>Shop | Bumble & Yarn</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header>
-  <div class="header-left">
-    <img src="logo.jpg" class="logo">
-    <h1>Bumble & Yarn</h1>
-  </div>
-  <nav>
+<header class="header">
+  <img src="logo.jpg" class="logo">
+  <h1>Bumble & Yarn</h1>
+
+  <nav class="nav">
     <a href="index.html">Home</a>
     <a href="shop.html">Shop</a>
     <a href="#">About</a>
   </nav>
 </header>
 
-<section class="products">
+<main class="products">
 
   <!-- FLURRY -->
   <div class="product">
     <img src="flurry coaster.jpg">
     <h3>Flurry Coaster</h3>
-    <p>A cute simple puff-like coaster.</p>
 
-    <select class="price">
-      <option value="">Select price</option>
-      <option value="£8">£8 – Set of 2</option>
-      <option value="£16">£16 – Set of 4</option>
-      <option value="£24">£24 – Set of 6</option>
+    <select>
+      <option>£7.20 – Set of 2</option>
+      <option>£14.40 – Set of 4</option>
+      <option>£21.60 – Set of 6</option>
+      <option>£28.80 – Set of 8</option>
+      <option>£36.00 – Set of 10</option>
+      <option>£43.20 – Set of 12</option>
     </select>
 
-    <select class="colour">
-      <option value="">Select colour</option>
-      <option>Pink</option>
-      <option>Blue</option>
-      <option>Cream</option>
+    <select>
+      <option>Red</option><option>Blue</option><option>White</option>
+      <option>Black</option><option>Green</option><option>Orange</option>
+      <option>Purple</option><option>Pink</option><option>Yellow</option>
+      <option>Brown</option><option>Grey</option>
     </select>
 
-    <button onclick="addToBasket('Flurry Coaster', this)">Add to basket</button>
+    <button onclick="addToBasket('Flurry Coaster', 7.20)">Add to basket</button>
   </div>
 
   <!-- FLOWER -->
   <div class="product">
     <img src="flower petal coaster.jpg">
     <h3>Flower Petal Coaster</h3>
-    <p>Special flower petal coasters made with love.</p>
 
-    <select class="price">
-      <option value="">Select price</option>
-      <option value="£10">£10 – Set of 2</option>
-      <option value="£20">£20 – Set of 4</option>
+    <select>
+      <option>£7.20 – Set of 2</option>
+      <option>£14.40 – Set of 4</option>
+      <option>£21.60 – Set of 6</option>
+      <option>£28.80 – Set of 8</option>
+      <option>£36.00 – Set of 10</option>
+      <option>£43.20 – Set of 12</option>
     </select>
 
-    <select class="colour">
-      <option value="">Select colour</option>
-      <option>Rainbow</option>
-      <option>Pastel</option>
+    <select>
+      <option>Red</option><option>Blue</option><option>White</option>
+      <option>Black</option><option>Green</option><option>Orange</option>
+      <option>Purple</option><option>Pink</option><option>Yellow</option>
+      <option>Brown</option><option>Grey</option>
     </select>
 
-    <button onclick="addToBasket('Flower Petal Coaster', this)">Add to basket</button>
-  </div>
-
-  <!-- CACTUS -->
-  <div class="product">
-    <img src="cactus coaster.jpg">
-    <h3>The Cactus</h3>
-    <p>Fun cactus coaster set.</p>
-
-    <select class="price">
-      <option value="">Select price</option>
-      <option value="£8">£8 – 2 (no pot)</option>
-      <option value="£23">£23 – 2 (with pot)</option>
-      <option value="£16">£16 – 4 (no pot)</option>
-      <option value="£31">£31 – 4 (with pot)</option>
-      <option value="£24">£24 – 6 (no pot)</option>
-      <option value="£39">£39 – 6 (with pot)</option>
-      <option value="£32">£32 – 8 (no pot)</option>
-      <option value="£47">£47 – 8 (with pot)</option>
-    </select>
-
-    <button onclick="addToBasket('Cactus Coaster', this)">Add to basket</button>
+    <button onclick="addToBasket('Flower Petal Coaster', 7.20)">Add to basket</button>
   </div>
 
   <!-- HELM -->
   <div class="product">
     <img src="helm coaster.jpg">
     <h3>Helm Coaster</h3>
-    <p>Nautical-inspired helm coaster.</p>
 
-    <select class="price">
-      <option value="">Select price</option>
-      <option value="£12">£12 – Set of 2</option>
+    <select>
+      <option>£7.20 – Set of 2</option>
+      <option>£14.40 – Set of 4</option>
+      <option>£21.60 – Set of 6</option>
+      <option>£28.80 – Set of 8</option>
+      <option>£36.00 – Set of 10</option>
+      <option>£43.20 – Set of 12</option>
     </select>
 
-    <select class="colour">
-      <option value="">Select colour</option>
-      <option>Navy</option>
-      <option>White</option>
+    <select>
+      <option>Red</option><option>Blue</option><option>White</option>
+      <option>Black</option><option>Green</option><option>Orange</option>
+      <option>Purple</option><option>Pink</option><option>Yellow</option>
+      <option>Brown</option><option>Grey</option>
     </select>
 
-    <button onclick="addToBasket('Helm Coaster', this)">Add to basket</button>
+    <button onclick="addToBasket('Helm Coaster', 7.20)">Add to basket</button>
   </div>
 
-</section>
+  <!-- CACTUS -->
+  <div class="product">
+    <img src="cactus coaster.jpg">
+    <h3>The Cactus</h3>
 
-<a href="basket.html" class="basket-icon">🛒<span id="basketCount">0</span></a>
+    <select>
+      <option>£8 – Set of 2 (no pot)</option>
+      <option>£23 – Set of 2 (with pot)</option>
+      <option>£16 – Set of 4 (no pot)</option>
+      <option>£31 – Set of 4 (with pot)</option>
+      <option>£24 – Set of 6 (no pot)</option>
+      <option>£39 – Set of 6 (with pot)</option>
+      <option>£32 – Set of 8 (no pot)</option>
+      <option>£47 – Set of 8 (with pot)</option>
+    </select>
+
+    <button onclick="addToBasket('Cactus', 8)">Add to basket</button>
+  </div>
+
+</main>
+
+<a href="basket.html" class="basket-float">🛒</a>
 
 <script src="products.js"></script>
 </body>
