--- a/website/basket.html
+++ b/website/basket.html
@@ -1,24 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
   <title>Your Basket</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header>
-  <div class="header-left">
-    <img src="logo.jpg" class="logo">
-    <h1>Your Basket</h1>
-  </div>
-</header>
-
-<section class="basket">
-  <ul id="basketItems"></ul>
-</section>
-
-<a href="basket.html" class="basket-icon">🛒<span id="basketCount">0</span></a>
+<h1>Your Basket</h1>
+<div id="basketItems"></div>
 
 <script src="products.js"></script>
 </body>
