--- a/website/index.html
+++ b/website/index.html
@@ -10,18 +10,21 @@
 <header class="header">
   <img src="logo.jpg" class="logo">
   <h1>Bumble & Yarn</h1>
-  <p class="welcome">Welcome to Bumble & Yarn</p>
+  <p class="tagline">Handmade crochet items made with love 🧶</p>
 
   <nav class="nav">
     <a href="index.html">Home</a>
-    <a href="shop.html">Shop</a>
-    <a href="#">About</a>
+
+    <div class="dropdown">
+      <a href="shop.html">Shop</a>
+      <div class="dropdown-content">
+        <a href="shop.html">Coasters</a>
+        <a href="shop.html">Sets</a>
+        <a href="shop.html">Special Items</a>
+      </div>
+    </div>
   </nav>
 </header>
-
-<main class="home">
-  <h2>Handmade crochet items made with love 🧶</h2>
-</main>
 
 <a href="basket.html" class="basket-float">🛒</a>
 
