--- a/website/index.html
+++ b/website/index.html
@@ -1,33 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
   <title>Bumble & Yarn</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header class="header">
-  <img src="logo.jpg" class="logo">
+<header>
+  <img src="images/logo.png" class="logo">
   <h1>Bumble & Yarn</h1>
   <p class="tagline">Handmade crochet items made with love 🧶</p>
 
-  <nav class="nav">
+  <nav>
     <a href="index.html">Home</a>
-
-    <div class="dropdown">
-      <a href="shop.html">Shop</a>
-      <div class="dropdown-content">
-        <a href="shop.html">Coasters</a>
-        <a href="shop.html">Sets</a>
-        <a href="shop.html">Special Items</a>
-      </div>
-    </div>
+    <a href="shop.html">Shop</a>
   </nav>
 </header>
 
 <a href="basket.html" class="basket-float">🛒</a>
 
-<script src="products.js"></script>
 </body>
 </html>
