--- a/website/basket.html
+++ b/website/basket.html
@@ -6,10 +6,13 @@
 </head>
 <body>
 
-<h1>Your Basket</h1>
-<h2 id="total"></h2>
+<header>
+  <img src="images/logo.png" class="logo">
+  <h1>Your Basket</h1>
+</header>
 
-<div id="basketItems"></div>
+<h2 id="total">Total: £0.00</h2>
+<div id="basket-items"></div>
 
 <script src="products.js"></script>
 </body>
