--- a/website/index.html
+++ b/website/index.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Bumble & Yarn</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
-  <img src="images/logo.png" class="logo">
+  <img src="logo.jpg" class="logo">
   <h1>Bumble & Yarn</h1>
-  <p class="tagline">Handmade crochet items made with love 🧶</p>
+  <p>Handmade crochet items made with love 🧶</p>
 
   <nav>
     <a href="index.html">Home</a>
-    <a href="shop.html">Shop</a>
+    <div class="dropdown">
+      <a href="shop.html">Shop</a>
+      <div class="dropdown-content">
+        <a href="shop.html#coasters">Coasters</a>
+        <a href="shop.html#sets">Sets</a>
+        <a href="shop.html#special">Special Items</a>
+      </div>
+    </div>
   </nav>
 </header>
 
-<a href="basket.html" class="basket-float">🛒</a>
+<a href="basket.html" class="basket-btn">🛒</a>
 
 </body>
 </html>
