--- a/website/basket.html
+++ b/website/basket.html
@@ -1,19 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Your Basket</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header>
-  <img src="images/logo.png" class="logo">
-  <h1>Your Basket</h1>
-</header>
+<h2>Your Basket</h2>
+<div id="basket"></div>
+<h3 id="total"></h3>
 
-<h2 id="total">Total: £0.00</h2>
-<div id="basket-items"></div>
+<script>
+const basket = JSON.parse(localStorage.getItem("basket")) || [];
+let total = 0;
 
-<script src="products.js"></script>
+const container = document.getElementById("basket");
+
+basket.forEach(item => {
+  total += item.price;
+
+  const div = document.createElement("div");
+  div.className = "basket-item";
+  div.innerHTML = `
+    <img src="${item.image}">
+    <div>
+      <strong>${item.name}</strong><br>
+      ${item.option}${item.color ? " – " + item.color : ""}<br>
+      £${item.price.toFixed(2)}
+    </div>
+  `;
+  container.appendChild(div);
+});
+
+document.getElementById("total").innerText =
+  "Total: £" + total.toFixed(2);
+</script>
+
 </body>
 </html>
