--- a/website/basket.html
+++ b/website/basket.html
@@ -28,16 +28,27 @@ function renderBasket() {
     div.className = "basket-item";
 
     div.innerHTML = `
-      <img src="${item.image}" style="width:80px; border-radius:12px;">
-      <div style="flex:1; text-align:left;">
+      <img 
+        src="${item.image}" 
+        style="width:120px; height:auto; border-radius:16px; flex-shrink:0;"
+      >
+
+      <div style="flex:1; text-align:left; padding-left:12px;">
         <strong>${item.name}</strong><br>
         ${item.option}${item.color ? " – " + item.color : ""}<br>
         £${item.price.toFixed(2)}
       </div>
+
       <button 
-        class="remove-btn" 
+        class="remove-btn"
         title="Remove item"
-        style="font-size:14px; padding:6px 8px; border-radius:50%; cursor:pointer;">
+        style="
+          font-size:11px;
+          padding:4px 6px;
+          border-radius:50%;
+          cursor:pointer;
+          line-height:1;
+        ">
         🗑️
       </button>
     `;
