--- a/website/index.html
+++ b/website/index.html
@@ -7,13 +7,18 @@
 </head>
 <body>
 
-<header>
-  <img src="logo.jpg" class="logo">
-  <h1>Bumble & Yarn</h1>
-  <p>Handmade crochet items made with love 🧶</p>
+<header class="home-hero">
+  <img src="logo.jpg" class="logo home-logo">
+
+  <h1 class="home-title">Bumble & Yarn</h1>
+
+  <p class="home-subtitle">
+    Crochet items made with love 🧶
+  </p>
 
   <nav>
     <a href="index.html">Home</a>
+
     <div class="dropdown">
       <a href="shop.html">Shop</a>
       <div class="dropdown-content">
