--- a/website/index.html
+++ b/website/index.html
@@ -27,6 +27,8 @@
         <a href="shop.html#special">Special Items</a>
       </div>
     </div>
+
+    <a href="basket.html">Checkout</a>
   </nav>
 </header>
 
