--- a/website/shop.html
+++ b/website/shop.html
@@ -9,10 +9,12 @@
 
 <header>
   <img src="logo.jpg" class="logo">
+
   <h1>Bumble & Yarn</h1>
 
   <nav>
     <a href="index.html">Home</a>
+
     <div class="dropdown">
       <a href="shop.html">Shop</a>
       <div class="dropdown-content">
@@ -21,6 +23,8 @@
         <a href="#special">Special Items</a>
       </div>
     </div>
+
+    <a href="basket.html">Checkout</a>
   </nav>
 </header>
 
