--- a/website/index.html
+++ b/website/index.html
@@ -7,24 +7,19 @@
 </head>
 <body>
 
-<header class="home-hero">
-  <img src="logo.jpg" class="logo home-logo">
+<header class="home">
+  <img src="logo.jpg" class="logo">
 
-  <h1 class="home-title">Bumble & Yarn</h1>
+  <h1>Bumble & Yarn</h1>
+  <p class="tagline">Crochet items made with love 🧶</p>
 
-  <p class="home-subtitle">
-    Crochet items made with love 🧶
-  </p>
-
-  <nav>
+  <nav class="nav">
     <a href="index.html">Home</a>
 
     <div class="dropdown">
-      <a href="shop.html">Shop</a>
+      <button class="dropbtn">Shop</button>
       <div class="dropdown-content">
-        <a href="shop.html#coasters">Coasters</a>
-        <a href="shop.html#sets">Sets</a>
-        <a href="shop.html#special">Special Items</a>
+        <a href="shop.html">All Products</a>
       </div>
     </div>
 
@@ -32,7 +27,7 @@
   </nav>
 </header>
 
-<a href="basket.html" class="basket-btn">🛒</a>
+<a href="basket.html" class="basket">🛒</a>
 
 </body>
 </html>
