--- a/website/index.html
+++ b/website/index.html
@@ -9,7 +9,6 @@
 
 <header class="home">
   <img src="logo.jpg" class="logo">
-
   <h1>Bumble & Yarn</h1>
   <p class="tagline">Crochet items made with love 🧶</p>
 
@@ -19,7 +18,7 @@
     <div class="dropdown">
       <button class="dropbtn">Shop</button>
       <div class="dropdown-content">
-        <a href="shop.html">All Products</a>
+        <a href="shop.html">Coasters</a>
       </div>
     </div>
 
