--- a/website/shop.html
+++ b/website/shop.html
@@ -9,18 +9,15 @@
 
 <header>
   <img src="logo.jpg" class="logo">
-
   <h1>Bumble & Yarn</h1>
 
-  <nav>
+  <nav class="nav">
     <a href="index.html">Home</a>
 
     <div class="dropdown">
-      <a href="shop.html">Shop</a>
+      <button class="dropbtn">Shop</button>
       <div class="dropdown-content">
-        <a href="#coasters">Coasters</a>
-        <a href="#sets">Sets</a>
-        <a href="#special">Special Items</a>
+        <a href="shop.html">Coasters</a>
       </div>
     </div>
 
@@ -28,9 +25,9 @@
   </nav>
 </header>
 
-<div id="products"></div>
+<div class="products" id="products"></div>
 
-<a href="basket.html" class="basket-btn">🛒</a>
+<a href="basket.html" class="basket">🛒</a>
 
 <script src="products.js"></script>
 </body>
