--- a/website/checkout.html
+++ b/website/checkout.html
@@ -2,53 +2,59 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Checkout</title>
+  <title>Checkout | Bumble & Yarn</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<header>
-  <img src="logo.jpg" class="logo">
-  <h1>Checkout</h1>
-</header>
+  <!-- Header -->
+  <header class="header">
+    <img src="logo.png" alt="Bumble & Yarn Logo" class="logo">
+    <h1>Bumble & Yarn</h1>
+  </header>
 
-<div id="checkout-container"></div>
+  <!-- Checkout Content -->
+  <main class="checkout-page">
+    <h2>Checkout</h2>
 
-<p id="empty-message" class="empty-message"></p>
+    <div id="checkout-items"></div>
+    <div id="checkout-total"></div>
 
-<script>
-const basket = JSON.parse(localStorage.getItem("basket")) || [];
-const container = document.getElementById("checkout-container");
-const emptyMessage = document.getElementById("empty-message");
+    <button class="checkout-btn">Place Order</button>
+  </main>
 
-if (basket.length === 0) {
-  emptyMessage.textContent = "Nothing to buy";
-} else {
-  let total = 0;
+  <!-- Checkout Script -->
+  <script>
+    const basket = JSON.parse(localStorage.getItem("basket")) || [];
 
-  basket.forEach(item => {
-    total += Number(item.price);
+    const itemsDiv = document.getElementById("checkout-items");
+    const totalDiv = document.getElementById("checkout-total");
 
-    const div = document.createElement("div");
-    div.className = "basket-item";
+    if (basket.length === 0) {
+      itemsDiv.innerHTML = "<p>Nothing to buy</p>";
+      totalDiv.innerHTML = "";
+    } else {
+      let total = 0;
 
-    div.innerHTML = `
-      <img src="${item.image}">
-      <div>
-        <h3>${item.name}</h3>
-        <p>Color: ${item.color || "N/A"}</p>
-        <p>Price: $${item.price}</p>
-      </div>
-    `;
+      basket.forEach(item => {
+        total += item.priceValue;
 
-    container.appendChild(div);
-  });
+        itemsDiv.innerHTML += `
+          <div class="checkout-item">
+            <img src="${item.image}" alt="${item.name}">
+            <div>
+              <strong>${item.name}</strong><br>
+              Price: ${item.priceText}<br>
+              Color: ${item.color}
+            </div>
+          </div>
+        `;
+      });
 
-  const totalDiv = document.createElement("h2");
-  totalDiv.textContent = "Total: $" + total.toFixed(2);
-  container.appendChild(totalDiv);
-}
-</script>
+      totalDiv.innerHTML = `<h3>Total: £${total.toFixed(2)}</h3>`;
+    }
+  </script>
 
 </body>
 </html>
