--- a/website/index.html
+++ b/website/index.html
@@ -7,26 +7,24 @@
 </head>
 <body>
 
-<header class="home">
-  <img src="logo.jpg" class="logo">
+<header class="header">
+  <img src="logo.jpg" alt="Bumble & Yarn Logo" class="logo">
   <h1>Bumble & Yarn</h1>
-  <p class="tagline">Crochet items made with love 🧶</p>
+  <p class="tagline">Handmade crochet items made with love 🧶</p>
 
   <nav class="nav">
     <a href="index.html">Home</a>
-
     <div class="dropdown">
       <button class="dropbtn">Shop</button>
       <div class="dropdown-content">
-        <a href="shop.html">Coasters</a>
+        <a href="products.html">Coasters</a>
       </div>
     </div>
-
-    <a href="basket.html">Checkout</a>
+    <a href="checkout.html">Checkout</a>
   </nav>
 </header>
 
-<a href="basket.html" class="basket">🛒</a>
+<a href="checkout.html" class="basket-icon">🛒</a>
 
 </body>
 </html>
